fix spacing - home page

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -29,6 +29,7 @@ h3 {
     font-weight: bolder;
     font-family: var(--font-mono);
     overflow: visible;
+    white-space: nowrap;
     display: block;
     line-height: 150%;
 }
